template of enviroment

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,13 @@
 HOST=0.0.0.0
 PORT=1337
 APP_KEYS=
+JWT_SECRET=
+API_TOKEN_SALT=
+
+# DATA BASE LOCAL
+DATABASE_HOST=localhost
+DATABASE_PORT=3306
+DATABASE_NAME=back
+DATABASE_USERNAME=root
+DATABASE_PASSWORD=!ChangeMe!
+DATABASE_SSL=false
